Improve project API structure and documentation
- Extract OpenAPI documentation to separate interface for better maintainability
- Refactor service method names to follow CRUD naming convention (create, readAll, readById, update, delete)
- Improve entity mapping with separate methods for create and update operations
- Add comprehensive JavaDoc documentation throughout project module
- Update HTTP request files to use dynamic token management and proper variable handling
- Enhance validation and default value handling in DTOs and mappers
- Configure security to protect project endpoints
- Improve code organization and remove redundant annotations